--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <title>CrUX Dashboard</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="form-container">
+        <form class="url-form">
+          <input
+            type="text"
+            class="url-form__input"
+            data-url-input
+            placeholder="https://example.com или https://example.com/page"
+            required
+          />
+          <select class="url-form__select" data-type-select>
+            <option value="auto">Автоопределение</option>
+            <option value="url">URL</option>
+            <option value="origin">Origin</option>
+          </select>
+          <select class="url-form__select" data-form-factor-select>
+            <option value="ALL">Все устройства</option>
+            <option value="PHONE">Телефон</option>
+            <option value="TABLET">Планшет</option>
+            <option value="DESKTOP">Десктоп</option>
+          </select>
+          <button type="submit" class="url-form__button">Анализировать</button>
+        </form>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
