--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app">
       <div class="form-container">
-        <form class="url-form">
+        <form class="url-form" data-form-index="0">
           <input
             type="text"
             class="url-form__input"
@@ -27,8 +27,21 @@
             <option value="TABLET">Планшет</option>
             <option value="DESKTOP">Десктоп</option>
           </select>
-          <button type="submit" class="url-form__button">Анализировать</button>
         </form>
+        <div class="form-container__add-comparison">
+          <button
+            type="button"
+            class="add-comparison-button"
+            data-add-comparison
+          >
+            Добавить сравнение с конкурентом
+          </button>
+        </div>
+        <div class="form-container__analyze">
+          <button type="button" class="analyze-button" data-analyze-button>
+            Анализировать
+          </button>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
